Fix color contrast problem for selected item in keyAssist dialog

--- a/bundles/org.eclipse.orion.client.ui/web/css/controls.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/controls.css
@@ -733,6 +733,10 @@ html[dir="rtl"] .keyAssistFloat { /* ACGC */
 	min-width: 150px;
 }
 
+.keyAssistItem.selected .keyAssistAccel {
+    color: black;
+}
+
 .inputCompletionContainer {
 	border-radius:1px;
 	color: black;
